fixing a conflict for the buttons not showing the legends

--- a/app/assets/stylesheets/maps.css.scss
+++ b/app/assets/stylesheets/maps.css.scss
@@ -26,7 +26,7 @@
   }
 }
 
-#map-buttons {
+#map-tools {
   position: absolute;
   top: 47px;
   left: 60px;
